# hackerrank

./: .gitignore
haskell/beautiful-quadruples/: README.md  beautiful-quadruples.cabal
haskell/beautiful-quadruples/app/: Main.hs
haskell/beautiful-quadruples/src/: Lib.hs
haskell/beautiful-quadruples/test/: Spec.hs
haskell/counting-sort/: CountingSort.hs
haskell/counting-sort2/: CountingSort.hs
haskell/lonely-integer/: LonelyInteger.hs
haskell/n-puzzle/: n-puzzle.cabal  stack.yaml
haskell/n-puzzle/app/: Main.hs
haskell/n-puzzle/src/: Heap.hs  NPuzzle.hs  Search.hs
haskell/n-puzzle/test/: Common.hs  HeapTest.hs  NPuzzleTest.hs  SearchTest.hs  Spec.hs
haskell/pairs/: search.cabal
haskell/pairs/app/: Main.hs
haskell/pascals-triangle/: Pascal.hs
haskell/simplify-expressions/: README.md  simplify-expressions.cabal
haskell/simplify-expressions/app/: All.hs  Main.hs
haskell/simplify-expressions/src/: Simplify.hs
haskell/simplify-expressions/src/Simplify/: AST.hs  Eval.hs  Parser.hs  Polynomial.hs
haskell/simplify-expressions/test/: Spec.hs
haskell/simplify-expressions/test/Test/: SimplifySpec.hs
haskell/simplify-expressions/test/Test/Simplify/: EvalSpec.hs  ParserSpec.hs
haskell/substring-search/: README.md  substring-search.cabal
haskell/substring-search/app/: Main.hs
haskell/substring-search/src/: Search.hs
haskell/substring-search/test/: Spec.hs
haskell/sums-of-powers/: README.md  stack.yaml  sums-of-powers.cabal
haskell/sums-of-powers/app/: All.hs  Main.hs
haskell/sums-of-powers/src/: Lib.hs
haskell/while-language/: README.md  while-language.cabal
haskell/while-language/app/: All.hs  Main.hs
haskell/while-language/src/: While.hs
haskell/while-language/src/While/: AST.hs  Interpreter.hs  Parser.hs
haskell/while-language/test/: Spec.hs
haskell/while-language/test/Test/: WhileSpec.hs
haskell/while-language/test/Test/While/: InterpreterSpec.hs  ParserSpec.hs
ocaml/bigger-is-greater/: BiggerIsGreater.ml  Makefile
ocaml/cipher/: Cipher.ml  Makefile
ocaml/coin-change/: CoinChange.ml  Makefile
ocaml/common-child/: Common_child.ml  Makefile
ocaml/counter-game/: CounterGame.ml  Makefile
ocaml/john-and-fences/: JohnAndFences.ml  Makefile
ocaml/missing-numbers/: Makefile  MissingNumbers.ml
ocaml/roads-and-libraries/: Makefile  RoadsAndLibraries.ml
ocaml/sparse-arrays/: Makefile  Sparse_arrays.ml
scala/matrix-layer-rotation/: build.sbt
scala/matrix-layer-rotation/src/main/scala/: MatrixLayerRotation.scala
scala/matrix-layer-rotation/src/test/scala/: MatrixLayerRotationTest.scala
scala/maximum-palindromes/: .gitignore  README.md  build.sbt
scala/maximum-palindromes/src/main/scala/: Solution.scala
scala/messy-medians/: build.sbt
scala/messy-medians/src/main/scala/: MessyMedians.scala
scala/messy-medians/src/test/scala/: MedianSetSpec.scala
scala/two-two/: build.sbt
scala/two-two/src/main/scala/: Solution.scala
scala/two-two/src/test/scala/: MutableDigitTrieTest.scala  SolutionTest.scala
