name:                simplify-expressions
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simplify-expressions#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Simplify
                     , Simplify.AST
                     , Simplify.Eval
                     , Simplify.Parser
                     , Simplify.Polynomial
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , text
  default-language:    Haskell2010

executable simplify-expressions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simplify-expressions
  default-language:    Haskell2010

test-suite simplify-expressions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simplify-expressions
                     , tasty
                     , tasty-hunit
  other-modules:       Test.Simplify.ParserSpec
                     , Test.SimplifySpec
                     , Test.Simplify.EvalSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simplify-expressions
