name:                while-language
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/while-language#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     While
                     , While.AST
                     , While.Interpreter
                     , While.Parser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
  default-language:    Haskell2010

executable while-language-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , while-language
  default-language:    Haskell2010

test-suite while-language-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.WhileSpec
                     , Test.While.InterpreterSpec
                     , Test.While.ParserSpec
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , tasty
                     , tasty-hunit
                     , while-language
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/while-language
